<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="5dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceLarge" >
    </TextView>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/nameLabel"
        android:hint="@string/enter_name_here" 
        android:inputType="textShortMessage">
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/urgency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/name"
        android:layout_marginTop="25dp"
        android:text="@string/urgency"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/urgencyGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/urgency"
        android:orientation="horizontal"
        android:layout_marginTop="12dp" >

        <RadioButton
            android:id="@+id/urgencyLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/low" />

        <RadioButton
            android:id="@+id/urgencyMid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mid" />
        
        <RadioButton
            android:id="@+id/urgencyHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high" />
    </RadioGroup>

    <TextView
        android:id="@+id/dueTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/urgencyGroup"
        android:layout_marginTop="25dp"
        android:text="@string/finish_time"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/dueTime"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="12dp"
        android:text="@string/date_not_set" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_not_set"
        android:layout_alignTop="@+id/date"
        android:layout_alignRight="@+id/time_picker"
        android:layout_marginRight="12dp"
        android:layout_alignEnd="@+id/time_picker" />

    <Button
        android:id="@+id/date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="0dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/date"
        android:textSize="15dp"
        android:text="@string/choose_date" />

    <Button
        android:id="@+id/time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="0dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/date_picker"
        android:layout_below="@id/time"
        android:textSize="15dp"
        android:text="@string/choose_time" />
	
    <TextView
        android:id="@+id/descriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_below="@id/date_picker"
        android:layout_marginTop="25dp"
        android:textAppearance="?android:attr/textAppearanceLarge" >
    </TextView>

    <EditText
        android:id="@+id/description"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="top|left"
        android:singleLine="false"
        android:lines="5"
        android:layout_below="@+id/descriptionLabel"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="50dp"
        android:padding="5dp"
        android:background="@drawable/border"
        android:hint="@string/enter_description_here" >
    </EditText>
    
    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="25dp"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/reset" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/submit" />

</RelativeLayout>